# me_pod_bassa

./: .gitignore  README.MD  myapp.py  pyproject.toml  requirements.txt  word_translations.csv
.streamlit/: config.toml  secrets.toml
data/: .~lock.dbs.csv#  .~lock.dbs2.csv#  db.csv  dbs.csv  dbs2.csv  dbs3.csv  sentences_translations.csv
src/: myapp.py
tmp/: dump.txt
utils/: cleaner.py
